2019-11-08  Joseph Myers  <joseph@codesourcery.com>

	* doc/invoke.texi (-Wold-style-definition): Document () not being
	considered an old-style definition for C2x.

2019-11-07  John David Anglin  <danglin@gcc.gnu.org>

	* config/pa/pa.md (memory_barrier): Revise to use ldcw barriers.
	Enhance comment.
	(memory_barrier_coherent, memory_barrier_64, memory_barrier_32): New
	insn patterns using ldcw instruction.
	(memory_barrier): Remove insn pattern using sync instruction.
	* config/pa/pa.opt (coherent-ldcw): New option.
	(ordered): New option.

2019-11-07  Segher Boessenkool  <segher@kernel.crashing.org>

	* config/rs6000/rs6000.c (validate_condition_mode): Don't assert for
	valid conditions.

2019-11-07  Jakub Jelinek  <jakub@redhat.com>

	* ipa-utils.c (ipa_merge_profiles): Fix fprintf format string
	typo - mistmatch -> mismatch.
	* ipa-profile.c (ipa_profile): Likewise.
	* ipa-devirt.c (compare_virtual_tables): Fix a comment typo
	- mistmatch -> mismatch.

2018-11-07  Segher Boessenkool  <segher@kernel.crashing.org>

	* simplify-rtx.c (comparison_to_mask): New function.
	(mask_to_comparison): New function.
	(simplify_logical_relational_operation): New function.
	(simplify_binary_operation_1): Call
	simplify_logical_relational_operation.

2019-11-07  Peter Bergner <bergner@linux.ibm.com>

	PR other/92090
	* config/rs6000/predicates.md (input_operand): Allow MODE_PARTIAL_INT
	modes for integer constants.

2019-11-07  Jan Hubicka  <jh@suse.cz>

	PR ipa/92406
	* ipa-fnsummary.c (analyze_function_body): Use get_create to copy
	summary.

2019-11-07  Jan Hubicka  <jh@suse.cz>

	* optc-save-gen.awk: Generate cl_target_option_free
	and cl_optimization_option_free.
	* opth-en.awk: Declare cl_target_option_free
	and cl_optimization_option_free.
	* tree.c (free_node): Use it.

2019-11-06  Jan Hubicka  <jh@suse.cz>

	* lto-streamer-in.c: Include alloc-pool.h.
	(freeing_string_slot_hasher): Remove.
	(string_slot_allocator): New object allocator.