@@ -1,3 +1,7 @@
+2019-11-08  Hongtao Liu  <hongtao.liu@intel.com>
+
+	* gcc.target/i386/pr92295.c: New test.
+
 2019-11-08  Joseph Myers  <joseph@codesourcery.com>
 
 	* gcc.dg/c11-old-style-definition-1.c,
