@@ -1,3 +1,9 @@
+2019-11-08  Hongtao Liu  <Hongtao.liu@intel.com>
+
+	PR target/92295
+	* config/i386/i386-expand.c (ix86_expand_vector_init_concat)
+	Enhance ix86_expand_vector_init_concat.
+
 2019-11-08  Joseph Myers  <joseph@codesourcery.com>
 
 	* doc/invoke.texi (-Wold-style-definition): Document () not being
